--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
     margin: 0;
     right: 0;
     bottom: 0;
-    min-width: 100%;
-    min-height: 100%;">  </video>
+    height: 100%;">  </video>
 
 
       <marquee behavior="" direction=""><img src="https://i.ibb.co/TgvNXgT/cloud.png"/></marquee>
