--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
 
 
 
-    <video src="images/bg.mp4" video autoplay muted loop style=" position: fixed ;
+     <!-- <video src="images/bg.mp4" video autoplay muted loop style=" position: fixed ;
     margin: 0;
     right: 0;
     bottom: 0;
-    height: 100%;">  </video>
+    height: 100%;">  </video> -->
 
 
       <marquee behavior="" direction=""><img src="https://i.ibb.co/TgvNXgT/cloud.png"/></marquee>
