--- a/index.html
+++ b/index.html
@@ -145,17 +145,17 @@
 
 
 
-     <!-- <video src="images/bg.mp4" video autoplay muted loop style=" position: fixed ;
+    <!-- <video src="images/bg.mp4" video autoplay muted loop style=" position: fixed ;
     margin: 0;
     right: 0;
     bottom: 0;
     height: 100%;">  </video> -->
 
 
-      <marquee behavior="" direction=""><img src="https://i.ibb.co/TgvNXgT/cloud.png"/></marquee>
+      <marquee behavior="" direction=""><img src="https://i.ibb.co/TgvNXgT/cloud.png" height="200px"/></marquee>
       
 
-      <div id="snap"><video src="images/video.webm" video autoplay muted loop height="300px"></div>
+      <div id="snap"><img src="images/intro.png" height="300px"/></div>
     <div class="main-container">
       <div class="item item-1">About</div>
       <div class="item item-2">Connect</div>
