--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     min-height: 100%;">  </video>
 
 
-      <marquee behavior="" direction=""><img src="https://i.ibb.co/TgvNXgT/cloud.png" height="250px"/></marquee>
+      <marquee><img src="https://i.ibb.co/TgvNXgT/cloud.png" height="250px"/></marquee>
       
 
       <div id="snap"><img src="images/intro.png"  height="300px"/></div>
