--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 
 
-    <video src="images/bg.mp4" video autoplay muted style=" position: fixed ;
+    <video src="images/bg.mp4" video autoplay loop muted style=" position: fixed ;
     margin: 0;
     right: 0;
     bottom: 0;
